@@ -4,43 +4,44 @@ import socket
 import time
 
 def handle_get(conn, path):
-    if path == '/':
-        conn.send('HTTP/1.0 200 OK\r\n')
-        conn.send('Content-type: text/html\r\n\r\n')
-        conn.send('<html>\n\t<body>\n\t\t')
-        conn.send('<h1>Hello, world.</h1>\n\t\t')
-        conn.send("This is brtaylor92's Web server.<br />\n\t\t")
-        conn.send("<a href='/content'>Content</a><br />\n\t\t")
-        conn.send("<a href='/file'>Files</a><br />\n\t\t")
-        conn.send("<a href='/image'>Images</a><br />\n\t")
-    elif path == '/content':
-        conn.send('HTTP/1.0 200 OK\r\n')
-        conn.send('Content-type: text/html\r\n\r\n')
-        conn.send('<html>\n\t<body>\n\t\t')
-        conn.send('<h1>Content Page</h1>\n\t\t')
-        conn.send('Content goes here, once there is any :)\n\t')
-        conn.close()
-    elif path == '/file':
-        conn.send('HTTP/1.0 200 OK\r\n')
-        conn.send('Content-type: text/html\r\n\r\n')
-        conn.send('<html>\n\t<body>\n\t\t')
-        conn.send('<h1>File Page</h1>\n\t\t')
-        conn.send('Files go here, once there are any :)\n\t')
-    elif path == '/image':
-        conn.send('HTTP/1.0 200 OK\r\n')
-        conn.send('Content-type: text/html\r\n\r\n')
-        conn.send('<html>\n\t<body>\n\t\t')
-        conn.send('<h1>Image Page</h1>\n\t\t')
-        conn.send('Images go here, once there are any :)\n\t')
-    else:
+    response = {'/' : 'HTTP/1.0 200 OK\r\n' + \
+                        'Content-type: text/html\r\n\r\n' + \
+                        '<html>\r\n\t<body>\r\n\t\t' + \
+                        '<h1>Hello, world.</h1>\r\n\t\t' + \
+                        'This is brtaylor92\'s Web server.<br />\r\n\t\t' + \
+                        '<a href=\'/content\'>Content</a><br />\r\n\t\t' + \
+                        '<a href=\'/file\'>Files</a><br />\r\n\t\t' + \
+                        '<a href=\'/image\'>Images</a><br />\r\n\t' + \
+                        '</body>\r\n</html>', \
+                 '/content' : 'HTTP/1.0 200 OK\r\n' + \
+                              'Content-type: text/html\r\n\r\n' + \
+                              '<html>\r\n\t<body>\r\n\t\t' + \
+                              '<h1>Content Page</h1>\r\n\t\t' + \
+                              'Content goes here, once there is any :)\r\n\t' + \
+                              '</body>\r\n</html>', \
+                 '/file' : 'HTTP/1.0 200 OK\r\n' + \
+                           'Content-type: text/html\r\n\r\n' + \
+                           '<html>\r\n\t<body>\r\n\t\t' + \
+                           '<h1>File Page</h1>\r\n\t\t' + \
+                           'Files go here, once there are any :)\r\n\t' + \
+                           '</body>\r\n</html>', \
+                 '/image' : 'HTTP/1.0 200 OK\r\n' + \
+                            'Content-type: text/html\r\n\r\n' + \
+                            '<html>\r\n\t<body>\r\n\t\t' + \
+                            '<h1>Image Page</h1>\r\n\t\t' + \
+                            'Images go here, once there are any :)\r\n\t' +\
+                            '</body>\r\n</html>'
+                }
+    try:
+        conn.send(response[path])
+    except:
         # Page we don't have...
         conn.send('HTTP/1.0 404 Not Found\r\n')
         conn.send('Content-type: text/html\r\n\r\n')
-        conn.send('<html>\n\t<body>\n\t\t')
-        conn.send('<h1>Oops! Something went wrong...</h1>\n\t\t')
-        conn.send('We couldn\'t find that page\n\t')
-    # And we're done
-    conn.send('</body>\n</html>')
+        conn.send('<html>\r\n\t<body>\r\n\t\t')
+        conn.send('<h1>Oops! Something went wrong...</h1>\r\n\t\t')
+        conn.send('We couldn\'t find that page\r\n\t')
+        conn.send('</body>\n</html>')
 
 def handle_post(conn):
     conn.send('HTTP/1.0 200 OK\r\n\r\n')
@@ -48,15 +49,16 @@ def handle_post(conn):
 
 def handle_connection(conn):
     req = conn.recv(1000)
-    check = req.split('\r\n')[0].split(' ')[0]
-    if check == 'GET':
+    if req[0:4] == 'GET ':
         try:
-            path = req.split('\r\n')[0].split(' ')[1]
+            path = req.split(' ', 3)[1]
             handle_get(conn, path)
         except IndexError:
             handle_get(conn, '/404')
-    elif check == 'POST':
+    elif req[0:5] == 'POST ':
         handle_post(conn)
+    else:
+        print req[0:5]
     # Done here
     conn.close()
 
